--- a/src/app/todo-list/todo-list.component.scss
+++ b/src/app/todo-list/todo-list.component.scss
@@ -1,9 +1,14 @@
 #container {
-  padding: 20px 20px 20px 20px;
-  max-width: 700px;
+  padding: 1.5rem;
+  max-width: 43rem;
   margin: auto;
 }
 
 .checked {
   text-decoration: line-through;
+}
+
+a {
+  margin-left: 1rem;
+  text-decoration: transparent;
 }
